# sshpass-rs

./: Cargo.toml
.github/workflows/: ci.yml
src/: main.rs  matcher.rs  password.rs  pty.rs
tests/: Dockerfile.sshd  integration.rs
tests/ssh_server/: mod.rs
