[package]
name = "sshpass-rs"
authors = ["Simon Richter <simon@sinic.eu>"]
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A cross-platform sshpass implementation in Rust"
keywords = ["ssh", "password", "terminal", "automation"]

[dependencies]
portable-pty = "0.9"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
ctrlc = "3"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
